--- a/1.htm
+++ b/1.htm
@@ -4,6 +4,11 @@
 function vaciar () {
   document.getElementById("n1").value = "";
 }
+function cubo() {
+  var num = document.getElementById("n1");
+  num.value = num.value * num.value * num.value;
+}
+
 function cuadrado() {
   var num = document.getElementById("n1");
   num.value = num.value * num.value;
@@ -14,6 +19,8 @@ function cuadrado() {
   Número:
   <input type="text" id="n1" onclick="vaciar()"><p>
 
-  <button onclick="cuadrado()"> x<sup>2</sup> </button>
+  <button onclick="cuadrado()"> x<sup>2</sup></button> 
+  <button onclick="cubo()">x<sup>3</sup>
+</button>
 </body>
 </html>
